--- a/package.json
+++ b/package.json
@@ -11,11 +11,15 @@
     "tw:watch": "tailwindcss -i ./src/index.css -o ./dist/output.css --watch"
   },
   "dependencies": {
+    "@radix-ui/react-icons": "^1.3.2",
     "@supabase/supabase-js": "^2.76.1",
-    "@tailwindcss/cli": "^4.1.16",
     "@tanstack/react-query": "^5.90.5",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.548.0",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "tailwind-variants": "^3.1.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
@@ -29,7 +33,7 @@
     "eslint-plugin-react-refresh": "^0.4.22",
     "globals": "^16.4.0",
     "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.16",
+    "tailwindcss": "^3.4.18",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.45.0",
     "vite": "^7.1.7"
